fluxcd/infrastructure/configs/envoy-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: eg
  namespace: envoy-gateway-system
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    external-dns.alpha.kubernetes.io/target: 82.169.17.216
  name: eg
  namespace: envoy-gateway-system
spec:
  gatewayClassName: eg
  infrastructure:
    annotations:
      metallb.io/loadBalancerIPs: 192.168.2.150
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
    - name: openwebrx-https
      protocol: HTTPS
      hostname: "openwebrx.homelab.larsmaes.nl"
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: eg-tls-openwebrx
            kind: Secret
    - name: web-https
      protocol: HTTPS
      hostname: "web.homelab.larsmaes.nl"
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: eg-tls-web
            kind: Secret
    - name: pocketid-https
      protocol: HTTPS
      hostname: "idp.homelab.larsmaes.nl"
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: eg-tls-pocketid
            kind: Secret
